k8s/person-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: person-service
spec:
  selector:
    app: person-service
  ports:
    - port: 80
      targetPort: 8082
      name: http
  type: ClusterIP
