k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: family-tree-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /persons
            pathType: Prefix
            backend:
              service:
                name: person-service
                port:
                  number: 80
